welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:5: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
	setCouleurBrosse();
                        ^PatternPicture:21: error: not found: value fairC
	fairC(Color.BLUE)
        ^PatternPicture:22: error: not found: value fairC
	fairC(Color.GREEN)
        ^PatternPicture:23: error: not found: value fairC
	fairC(Color.YELLOW)
        ^