welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {

def faireC(c:Color){
	setCouleurBrosse();
	gauche();
	avance();
	baisseBrosse();
	leveBrosse();
	recule();
	droite();
	avance();
	baisseBrosse();
	leveBrosse();
	avance();
	avance();
	gauche();
}
for (x<- 1 to 3){
	faireC(Color.RED)
	fairC(Color.BLUE)
	fairC(Color.GREEN)
	fairC(Color.YELLOW)
}

}
